# onestep

./: .gitignore  LICENSE  OneStep-Windows.spec  PRIVACY.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  _bootstrap.py  pyproject.toml  requirements-lock.txt  requirements.txt  run.py
.github/workflows/: build-windows.yml
docs/: smartscreen.md  user-guide.md
src/doc_auto/: __init__.py  app.py  branding.py
src/doc_auto/domain/: __init__.py  file_types.py  job.py  models.py  options.py  strategy.py
src/doc_auto/services/: __init__.py  document_cleanup_workflow.py  file_replace.py  hwp_pdf.py  image_pipeline.py  image_resizer.py  image_rotation.py  input_preparation.py  interfaces.py  manual_crop.py  ocr.py  ocr_runner.py  pdf_converter.py  pdf_page_renderer.py  pdf_workflow.py  recycle_bin.py  resize_workflow.py  runtime_paths.py  settings_store.py  shell_notify.py  source_cache.py  temp_storage.py  (+2 more)
tests/: _bootstrap.py  conftest.py  pdf_assertions.py  test_document_cleanup_workflow.py  test_document_presence.py  test_file_replace.py  test_image_pipeline.py  test_image_resizer.py  test_input_preparation.py  test_main_window_cleanup.py  test_main_window_pdf.py  test_main_window_resize.py  test_manual_crop.py  test_ocr_orientation.py  test_pdf_converter.py  test_pdf_workflow.py  test_preview_panel.py  test_privacy_no_logs.py  test_public_terms.py  test_removed_legacy_features.py  test_resize_workflow.py  test_settings_dialog.py  test_settings_store.py  test_source_cache.py  test_temp_storage.py  test_ui_import.py  test_work_list.py  test_workflow_interfaces.py
(+8 files in other folders)
