[project]
name = "onestep"
version = "1.0"
description = "Windows portable document cleanup utility"
requires-python = ">=3.9"
dependencies = [
    "numpy>=2.0.0",
    "opencv-python-headless>=4.10.0",
    "Pillow>=10.0.0",
    "winrt-Windows.Media.Ocr>=3.2.1",
    "winrt-Windows.Graphics.Imaging>=3.2.1",
    "winrt-Windows.Storage.Streams>=3.2.1",
    "winrt-Windows.Data.Pdf>=3.2.1",
    "winrt-Windows.Storage>=3.2.1",
    "winrt-Windows.Globalization>=3.2.1",
    "winrt-Windows.Foundation>=3.2.1",
    "winrt-Windows.Foundation.Collections>=3.2.1",
    "PySide6>=6.8.0",
    "pywin32>=300; platform_system == 'Windows'"
]
